--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
+  
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
@@ -22,8 +23,11 @@
       "es2018", 
       "dom"
     ],
+    "strictPropertyInitialization": false,
+    "skipLibCheck": true,
     "useDefineForClassFields": false
   },
+  
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
